CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- The jobs.cgi web interface now handles all job
	  operations, allowing the administrator to allow "job
	  administrators" or operators to manage jobs (but not
	  queues) on the server.
	- The cupsDoFileRequest() function now checks if the
	  filename passed into the function is a directory, and
	  returns the IPP_NOT_POSSIBLE error if so.
	- New SCSI printer backend.
	- Cleaned up handling of locales with trailing character
	  set definitions.
	- Fixed handling of invalid PPD attributes inside
	  OpenUI/CloseUI.
	- Fixed a problem with SSL and the job, printer, and
	  admin CGIs on ports other than 443.
	- The scheduler didn't handle AuthClass properly.
	- Added French translation of man pages.
	- Updated the text filter to support the const_cast,
	  dynamic_cast, and static_cast keywords in ISO C++.
	- Now use strlcat() and strlcpy() (or emulation
	  functions) for easier string/buffer protection.
	- The auto-generated printcap/printers.conf files now
	  have a small comment header explaining where the file
	  comes from...
	- The PostScript filter now supports 6, 9, and 16-up
	  output, as well as new number-up-border and
	  number-up-layout options.
	- The lpoptions command didn't set options properly when
	  using the default printer.
	- Added ConfigFilePerm and LogFilePerm directives.
	- Increased maximum size of MIME types to IPP_MAX_NAME
	  to allow for longer printer names.
	- No longer create remote printers when loading job
	  history data.
	- The printer-make-and-model attribute wasn't set when
	  the PPD file didn't contain a NickName attribute.
	- Now handle PPD files with translation strings longer
	  than 80 bytes - they are truncated if they go over...
	- The scheduler didn't handle signals until after it
	  loaded the configuration files the first time; this
	  caused problems on some installations that would